# eternalMac

./: .gitignore  Cargo.toml  Makefile  README.md  SECURITY.md
.github/: dependabot.yml
.github/workflows/: rust.yml
docs/superpowers/plans/: 2026-05-31-dotsync-allowlist.md
docs/superpowers/specs/: 2026-05-31-dotsync-allowlist-design.md
packaging/homebrew/: README.md
src/: cli.rs  lib.rs  main.rs
src/app/: context.rs  paths.rs
src/commands/: attach.rs  daemon.rs  mod.rs  session.rs  setup.rs  sync.rs
src/config/: store.rs
src/daemon/: client.rs  server.rs
src/model/: config.rs  state.rs
src/platform/: launchd.rs
src/process/: runner.rs
src/setup/: client.rs  prompts.rs  server.rs
src/sync/: service.rs
src/tooling/: brew.rs  dependencies.rs  mutagen.rs  tailscale.rs  tmux.rs
tests/: attach.rs  cli_help.rs  cli_surface.rs  config_store.rs  daemon.rs  dependencies.rs  doctor.rs  launchd.rs  session.rs  setup.rs  sync.rs  tooling.rs
website/: README.md  astro.config.mjs  package-lock.json  package.json
website/src/content/docs/docs/: index.md
website/src/content/docs/docs/getting-started/: client-setup.md  installation.md  server-setup.md
website/src/content/docs/docs/operations/: status-and-doctor.md  troubleshooting.md
website/src/content/docs/docs/reference/: commands.md
website/src/content/docs/docs/usage/: attach.md  sessions.md  sync.md
website/src/pages/: index.astro
website/src/styles/: home.css
