[package]
name = "eternalmac"
version = "0.1.1"
edition = "2021"
license = "Apache-2.0"

[[bin]]
name = "eternalMac"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.38", features = ["derive"] }
dialoguer = "0.11.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
toml = "0.8.23"

[dev-dependencies]
assert_cmd = "2.0.17"
predicates = "3.1.3"
tempfile = "3.20.0"
