[package]
name = "eternalmac"
version = "0.2.1"
edition = "2021"
license = "Apache-2.0"

[[bin]]
name = "eternalMac"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.38", features = ["derive"] }
dialoguer = "0.12.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.150"
toml = "1.1.2"

[dev-dependencies]
assert_cmd = "2.2.2"
predicates = "3.1.3"
tempfile = "3.20.0"
